[gd_scene load_steps=4 format=3 uid="uid://cfc4qqmu1h11e"]

[ext_resource type="Script" path="res://controller.gd" id="1_k24ve"]
[ext_resource type="Script" path="res://objects/click_point.gd" id="2_as5mu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_84q7u"]
radius = 0.5

[node name="Controller" type="Node2D"]
script = ExtResource("1_k24ve")

[node name="ClickPoint" type="Area2D" parent="."]
script = ExtResource("2_as5mu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickPoint"]
shape = SubResource("CircleShape2D_84q7u")

[connection signal="auto_move" from="ClickPoint" to="." method="on_auto_move"]
[connection signal="interact_empty" from="ClickPoint" to="." method="on_interact_empty"]
[connection signal="interact_object" from="ClickPoint" to="." method="on_interact"]
